--- a/src/components/Context/scss/index.scss
+++ b/src/components/Context/scss/index.scss
@@ -10,11 +10,15 @@
     text-align: left;
     text-indent: 1rem;
     line-height: 1.5rem;
+    @media (max-width: 770px) {
+      font-size: small;
+      font-weight: 300;
+    }
   }
 
   .context_container {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr;
     row-gap: 5vh;
     column-gap: 2vw;
     max-width: 60%;
