--- a/src/components/Context/scss/index.scss
+++ b/src/components/Context/scss/index.scss
@@ -29,7 +29,7 @@
     }
     @media (max-width: 770px) {
       grid-template-columns: 1fr;
-      max-height: 40vh;
+      grid-template-rows: repeat(auto-fill, 1fr);
     }
   }
 }
