--- a/src/components/Context/scss/index.scss
+++ b/src/components/Context/scss/index.scss
@@ -29,7 +29,12 @@
     }
     @media (max-width: 770px) {
       grid-template-columns: 1fr;
-      grid-template-rows: repeat(auto-fill, 1fr);
+      grid-template-rows: repeat(auto-fill, 150px);
+      img {
+        width: 100%;
+        height: 100%;
+        max-height: 150px;
+      }
     }
   }
 }
